 29-Jun-2022  V1.702 Remove unnecessary custom handling of computed-model identifiers (will now use the internally-modified entry.id)
 23-Dec-2022  V1.703 Configuration changes to support tox 4
 26-Jan-2023  V1.704 Update MA_DICT_LOCATOR path in exdb-config-example.yml and add uchar5 to DataTypeApplicationInfo.py
 30-Jan-2023  V1.705 Update requirements (pin SQLAlchemy)
 14-Feb-2023  V1.706 Updates to PdbxLoader and RepoLoadWorkflow to support resumability of core data loading tasks
 22-Feb-2023  V1.707 Updates to PdbxLoader to use case-sensitivity for brute force document purge
 06-Apr-2023  V1.708 Add support for entity_id_list cifType in DataTypeApplicationInfo
 26-Apr-2023  V1.709 Fix document pre-purge regex during load, and add regexPurge flag to control running that step
  8-May-2023  V1.710 Fix error handling in PdbxLoader to cause failure when documents fail to load
 19-May-2023  V1.711 Update DNS to PDB archive
 23-Sep-2023  V1.712 Add support for pdb_id_u cifType in DataTypeApplicationInfo
  6-Nov-2023  V1.713 Add maxStepLength argument to RepoLoadWorkflow
 21-Nov-2023  V1.714 Add support in json schema for min and unique items for sub-categories and iterable attributes
 15-Dec-2023  V1.715 Revert setting for mergeValidationReports
 19-Mar-2024  V1.716 Add quality check to PdbxLoader to ensure validation report data are loaded along with the primary data;
                     Begin updating PdbxLoader and RepoLoadEx to support weekly update workflow CLI requirements
 03-Apr-2024  V1.717 Add int_list cifType to DataTypeApplicationInfo
 09-Apr-2024  V1.718 Update RepoLoadExec CLI and RepoLoadWorkflow to support CLI usage from weekly-update workflow
  6-May-2024  V1.719 Updates to CLI utilities
  9-May-2024  V1.720 Adjust provider type exclusion input to accept a list of types; update setuptools config
 13-May-2024  V1.721 Update requirements
  1-Jul-2024  V1.722 Pylinting