@@ -6,8 +6,7 @@ jsonschema >= 2.6.0
 jsondiff >= 1.2.0
 strict-rfc3339
 mysqlclient >= 1.3.12
-pymongo>=3.12.0
-# pymongo >= 3.7.0  # need to fix this later
+pymongo >= 3.12.0
 mmcif >= 0.88.0
 rcsb.utils.config >= 0.40
 rcsb.utils.io >= 1.46
